# src/adapters/http/routes/pagamentoRoutes.ts
@@ -1,15 +1,15 @@
-import express, { Request, Response } from 'express';
-import {Status} from '../../../domain/models/Pagamento'
-import { CriarQrcodeUseCase } from '../../../application/useCases/pagamento/CriarQrCodeUseCase';
-import { BuscarPagamentoPorIdUseCase } from '../../../application/useCases/pagamento/BuscarPagamentoPorIdUseCase';
+import express, { Request, Response } from "express";
+import { Status } from "../../../domain/models/Pagamento";
+import { CriarQrcodeUseCase } from "../../../application/useCases/pagamento/CriarQrCodeUseCase";
+import { BuscarPagamentoPorIdUseCase } from "../../../application/useCases/pagamento/BuscarPagamentoPorIdUseCase";
 
-
-import logger from '../../../config/logger';
+import logger from "../../../config/logger";
 const router = express.Router();
 
-router.post('/', async (req: Request, res: Response) => {
-  let { id_pedido, cpf_cliente, descricao_pedido, valor, status_pagamento } = req.body;
-  status_pagamento = Status.Aguardando
+router.post("/", async (req: Request, res: Response) => {
+  let { id_pedido, cpf_cliente, descricao_pedido, valor, status_pagamento } =
+    req.body;
+  status_pagamento = Status.Aguardando;
   try {
     const pagamento = await CriarQrcodeUseCase.execute(
       id_pedido,
@@ -17,25 +17,23 @@ router.post('/', async (req: Request, res: Response) => {
       status_pagamento,
       descricao_pedido,
       valor,
-      );
+    );
 
     return res.status(200).json(pagamento);
   } catch (error) {
     logger.info(error);
-    return res.status(500).json({ message: 'Erro ao gerar seu pagamento.' });
+    return res.status(500).json({ message: "Erro ao gerar seu pagamento." });
   }
 });
 
-router.get('/:id', async (req: Request, res: Response) => {
-
+router.get("/:id", async (req: Request, res: Response) => {
   try {
     const id = String(req.params.id);
     const pagamento = await BuscarPagamentoPorIdUseCase.execute(id);
     return res.status(200).json(pagamento);
   } catch (error) {
-    return res.status(500).json({ message: 'Erro ao buscar o pagamento.' });
+    return res.status(500).json({ message: "Erro ao buscar o pagamento." });
   }
 });
-
 
 export default router;
